<resources>
    <string name="app_name">ProyectoDI</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signIn">SING IN</string>
    <string name="login">LOGIN</string>
    <string name="crea_tu_cuenta">CREA TU CUENTA</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="crear">CREAR</string>
    <string name="nombre">Nombre</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="personaliza_tu_cuenta">Personaliza tu cuenta:</string>
    <string name="editar">EDITAR</string>
    <string name="title">ARTFILM</string>
    <string name="no_salir">No salir</string>
    <string name="salir_y_guardar">Salir y guardar</string>
    <string name="seguro_que_quieres_salir">¿Seguro que quieres salir?</string>
    <string name="las_mejores_peliculas_y_series_del_momento">Las mejores peliculas y series del momento</string>
    <string name="peliculas">Peliculas</string>
    <string name="series">Series</string>
    <string name="volver">VOLVER</string>
</resources>