<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalizaActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_gradient"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--GO BACK BUTTON-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageBtnGoBack"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_arrow"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:text="@string/personaliza_tu_cuenta"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!--IMAGEN-->
        <ImageView
            android:id="@+id/imageUser"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:src="@drawable/image_photo"
            android:background="@drawable/circle_background"
            android:scaleType="centerCrop"
            android:clipToOutline="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--CAMERA BUTTON-->
            <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondary"
                android:src="@drawable/icon_camera"
                tools:ignore="SpeakableTextPresentCheck" />

            <!--GALLERY BUTTON-->
            <ImageButton
                android:id="@+id/btnGallery"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginRight="110dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondary"
                android:src="@drawable/icon_gallery"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <!--NAME-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableStart="@drawable/icon_user"
                android:drawablePadding="10dp"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Warning message-->
        <TextView
            android:id="@+id/textViewWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@color/warning"
            android:drawableStart="@drawable/icon_warning"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="50dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="invisible" />

        <!--SIGN IN BUTTOM-->
        <Button
            android:id="@+id/btnActualizar"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/secondary"
            android:elevation="2dp"
            android:text="@string/actualizar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>