<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <View
        android:id="@+id/viewHabilidad"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:elevation="4dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textViewPregunta"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/seguro_que_quieres_salir"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/viewHabilidad"
        app:layout_constraintStart_toStartOf="@+id/viewHabilidad"
        app:layout_constraintTop_toTopOf="@+id/viewHabilidad"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnSi"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/secondary"
        android:elevation="5dp"
        android:shadowColor="#5C5C5C"
        android:text="@string/salir_y_guardar"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/viewHabilidad"
        app:layout_constraintStart_toStartOf="@+id/viewHabilidad"
        app:layout_constraintTop_toTopOf="@+id/viewHabilidad"
        app:strokeColor="#FFFFFF"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnNo"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/primary"
        android:elevation="5dp"
        android:shadowColor="#5C5C5C"
        android:text="@string/no_salir"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/viewHabilidad"
        app:layout_constraintStart_toStartOf="@+id/viewHabilidad"
        app:layout_constraintTop_toTopOf="@+id/viewHabilidad"
        app:strokeColor="#FFFFFF"
        android:visibility="invisible"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_gradient"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="MI PERFIL"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageUser"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/image_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageEmail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/icon_email_white" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/icon_user_white" />

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageLock"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/icon_lock_white" />

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text=""

                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>


        <Button
            android:id="@+id/btnEditar"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/secondary"
            android:elevation="2dp"
            android:text="@string/editar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="@color/white" />

        <Button
            android:id="@+id/btnSalir"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/transparent"
            android:elevation="2dp"
            android:text="SALIR"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>